# test_task_client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  settings.hpp
